--- a/css/style.css
+++ b/css/style.css
@@ -6,17 +6,36 @@
     color:black;
     font-size: 24px;
 }
+
 .list{
     color:black;
     list-style: none;
     font-size: 14px;
 }
+..link-contact{
+    color:#2196F3;
+}
 .list a{
     text-decoration: none;
+   
 }
 .list:first-child{
     color:#2196F3;
 }
 .title_h1{
-    font-size: 40px;
+    font-size: 44px;
+}
+/* Стили раздела "решения для бизнеса" */
+.decisions-title{
+    font-size: 14px;
+    font-weight: bold;
+}
+.decisions-text {
+    font-weight: 400;
+    color:#757575;
+    letter-spacing: 3%;
+}
+.then-title{
+    font-size: 36px;
+    
 }
