--- a/css/style.css
+++ b/css/style.css
@@ -6,18 +6,16 @@
     color:black;
     font-size: 24px;
 }
-
 .list{
     color:black;
     list-style: none;
     font-size: 14px;
 }
-..link-contact{
+.link-contact{
     color:#2196F3;
 }
 .list a{
     text-decoration: none;
-   
 }
 .list:first-child{
     color:#2196F3;
